<resources>
    <string name="app_name">Group Spending</string>
    <string name="status">Loading...</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_sign_up">SIGN UP</string>
    <string name="hint_text">Email or Username</string>
    <string name="hint_text_2">Password</string>
    <string name="forgot">FORGOT PASSWORD</string>
    <string name="or">Or</string>
    <string name="google">CONTINUE WITH GOOGLE</string>
    <string name="facebook">CONTINUE WITH FACEBOOK</string>
    <string name="option_register">Do not have an account?</string>
    <string name="register">Register here</string>
    <string name="create_account">Create Your New Account</string>
    <string name="dashboard">Dashboard</string>
    <string name="total_members">Total number of members: </string>
    <string name="fund_balance">Fund balance: </string>
    <string name="fund_recent">Most recent fund closing: </string>
    <string name="name_of_group">Group name: </string>
    <string name="chart">Income and expenditure chart</string>
    <string name="chart_of_expense">Expense chart</string>
    <string name="create_introduction_1">Let\'s start by creating a new group </string>
    <string name="create_introduction_2">Create your new group and start managing group spend efficiently and transparently. </string>
    <string name="welcome_1">Welcome to Expense Management App</string>
    <string name="welcome_2">We hope to provide the best expense management solution for your team. Thank you very much.</string>
    <string name="btn_create">+ CREATE A NEW GROUP</string>
    <string name="create_group">Create Your New Group</string>
    <string name="form_group_name">Group name: </string>
    <string name="hint_text_feild_1">Enter your name\'s group</string>
    <string name="group_founding_date">Group founding date: </string>
    <string name="hint_group_founding">dd/mm/yyyy</string>\
    <string name="btn_add_member">+ ADD A MEMBER</string>
    <string name="btn_complete">COMPLETE</string>
    <string name="btn_start">LET\'S START NOW</string>
    <string name="btn_add">ADD</string>
    <string name="btn_back">BACK</string>
    <string name="add_a_member">Add a member</string>
    <string name="btn_select_image">Select image</string>
    <string name="name">Name:</string>
    <string name="hint_name">Enter member\'s name</string>
    <string name="yob">Year of birth:</string>
    <string name="hint_yob">Enter member\'s year of birth</string>
    <string name="address">Address: </string>
    <string name="hint_address">Enter member\'s address</string>
    <string name="entry_date">Group entry date: </string>
    <string name="email">Email: </string>
    <string name="hint_email">Enter member\'s email address</string>
    <string name="phone">Phone number: </string>
    <string name="hint_phone_number">Enter member\'s phone number</string>
    <string name="hi">Hi, Alex</string>
    <string name="total_number">Total number of members: </string>
    <string name="total_number_example">15</string>
    <string name="fund_balance_1">Fund balance: </string>
    <string name="fund_balance_1_ex">1,000,000 VND</string>
    <string name="most_recent_fund_closing">Most recent fund closing: </string>
    <string name="most_recent_fund_closing_ex">07/05/2025</string>
    <string name="group_name">Group name: </string>
    <string name="group_name_example">Lightning\'s team</string>
    <string name="overview_chart">Overview of funds and expenses</string>
    <string name="member_fragment">Member Management</string>
    <string name="overview_fragment">Overview member list</string>
    <string name="detail_info">Member details</string>
    <string name="edit_fragment">Edit member</string>
    <string name="btn_confirm">Confirm</string>

    <string name="input_transaction_fragment">Enter income and expenditure</string>
    <string name="expense">Expense</string>
    <string name="fund">Fund</string>
    <string name="date">Date: </string>
    <string name="note">Note: </string>
    <string name="note_hint">Add a note</string>
    <string name="topic">Topic: </string>
    <string name="topic_hint">Add a topic</string>
    <string name="money">Money: </string>
    <string name="category">Category: </string>
    <string name="money_add">Money add: </string>
    <string name="money_hint">0</string>
    <string name="money_hint_2">Enter money\'s each member</string>
    <string name="currency">VND</string>

    <string name="food">Food</string>
    <string name="coffee">Coffee</string>
    <string name="birthday">Birthday</string>
    <string name="sport">Sport</string>
    <string name="travel">Travel</string>
    <string name="things">Houseware</string>
    <string name="electric">Electric</string>
    <string name="water">Water</string>
    <string name="internet">Internet</string>
    <string name="house">House</string>
    <string name="volunteer">Volunteer</string>
    <string name="gift">Gift</string>
    <string name="project">Project</string>
    <string name="holiday">Holiday</string>
    <string name="submit_btn">SUBMIT</string>
    <string name="delete_btn">DELETE</string>
    <string name="delete_btn_2">Delete</string>

    <string name="title_detail_transaction">Statistics</string>
    <string name="list_of_expenses">List of expenses for the month</string>

    <string name="edit_expense">Edit expense</string>
    <string name="title_report">Report expenses</string>
    <string name="expense_report">Report on monthly expenses</string>
    <string name="export_report">Export</string>
    <string name="total_expenses">Total of expenses: </string>



</resources>