<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/very_large_2"
    android:paddingHorizontal="@dimen/medium">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dashboard"
                style="@style/TextHeading2"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hi"
                style="@style/TextBody1"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/imgAvatar"
            android:layout_width="@dimen/super_large_2"
            android:layout_height="@dimen/super_large_2"
            android:background="@drawable/boder_avatar"
            android:src="@drawable/default_avatar" />
    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CustomCardView"
        android:layout_marginTop="@dimen/medium_large">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="@dimen/medium">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/group_name"
                    android:layout_marginTop="@dimen/small"
                    style="@style/TextBody2"/>
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/group_name_example"
                    style="@style/TextHeading3"/>
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_members"
                    android:layout_marginTop="@dimen/small"
                    style="@style/TextBody2"/>
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_number_example"
                    style="@style/TextHeading3"/>
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fund_balance_1"
                    android:layout_marginTop="@dimen/small"
                    style="@style/TextBody2"/>
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fund_balance_1_ex"
                    style="@style/TextHeading3"/>
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/most_recent_fund_closing"
                    android:layout_marginTop="@dimen/small"
                    style="@style/TextBody2"/>
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/most_recent_fund_closing_ex"
                    style="@style/TextHeading3"
                    android:layout_marginBottom="@dimen/small"/>
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/presentation"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/overview_chart"
        style="@style/TextHeading4"
        android:layout_marginTop="@dimen/medium"/>

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pieChartExpenseAndFund"
        android:layout_width="match_parent"
        android:layout_height="@dimen/piechart_height"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/medium" />


</LinearLayout>