<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/super_large"
    android:paddingHorizontal="@dimen/medium">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/icBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:layout_gravity="center"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_a_member"
            android:layout_marginStart="@dimen/small"
            style="@style/TextHeading2"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/imgAvatar"
        android:layout_width="@dimen/super_large_lv2"
        android:layout_height="@dimen/super_large_lv2"
        android:background="@drawable/boder_avatar"
        android:src="@drawable/default_avatar"
        android:layout_gravity="center"/>

    <com.google.android.material.button.MaterialButton
        style="@style/TextButton"
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/small"
        android:paddingHorizontal="@dimen/large"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/tiny"
        android:layout_marginBottom="@dimen/small"
        android:text="@string/btn_select_image"
        app:cornerRadius="@dimen/corner_radius_home" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name" />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_search_box"
        app:cardBackgroundColor="@color/box_background_color"
        app:cardCornerRadius="@dimen/corner_radius_home">
            <EditText
                style="@style/TextInsideSearchBox"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_search_box"
                android:background="@null"
                android:layout_gravity="center"
                android:hint="@string/hint_text_feild_1"
                android:paddingStart="@dimen/more_large"
                android:paddingEnd="@dimen/small"
                android:singleLine="true"
                android:textColorHint="@color/hint_text_color" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yob" />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_search_box"
        app:cardBackgroundColor="@color/box_background_color"
        app:cardCornerRadius="@dimen/corner_radius_home">
        <EditText
            style="@style/TextInsideSearchBox"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_search_box"
            android:background="@null"
            android:layout_gravity="center"
            android:hint="@string/hint_yob"
            android:paddingStart="@dimen/more_large"
            android:paddingEnd="@dimen/small"
            android:singleLine="true"
            android:inputType="number"
            android:textColorHint="@color/hint_text_color" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address" />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_search_box"
        app:cardBackgroundColor="@color/box_background_color"
        app:cardCornerRadius="@dimen/corner_radius_home">
        <EditText
            style="@style/TextInsideSearchBox"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_search_box"
            android:background="@null"
            android:layout_gravity="center"
            android:hint="@string/hint_address"
            android:paddingStart="@dimen/more_large"
            android:paddingEnd="@dimen/small"
            android:singleLine="true"
            android:textColorHint="@color/hint_text_color" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entry_date" />
    <androidx.cardview.widget.CardView
        android:id="@+id/fieldDate"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_search_box"
        app:cardBackgroundColor="@color/box_background_color"
        app:cardCornerRadius="@dimen/corner_radius_home">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtDate"
                style="@style/TextInsideSearchBox"
                android:layout_width="@dimen/layout_width_0"
                android:layout_height="wrap_content"
                android:layout_weight="@dimen/layout_weight_1"
                android:background="@null"
                android:hint="@string/hint_group_founding"
                android:paddingStart="@dimen/more_large"
                android:paddingEnd="@dimen/small"
                android:singleLine="true"
                android:textColorHint="@color/hint_text_color"
                android:focusable="false"
                android:inputType="none"/>

            <ImageView
                android:id="@+id/icCalendar"
                android:layout_width="@dimen/small_icon"
                android:layout_height="@dimen/small_icon"
                android:layout_marginEnd="@dimen/small"
                android:src="@drawable/ic_calendar" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone" />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_search_box"
        app:cardBackgroundColor="@color/box_background_color"
        app:cardCornerRadius="@dimen/corner_radius_home">
        <EditText
            style="@style/TextInsideSearchBox"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_search_box"
            android:background="@null"
            android:layout_gravity="center"
            android:hint="@string/hint_phone_number"
            android:inputType="number"
            android:paddingStart="@dimen/more_large"
            android:paddingEnd="@dimen/small"
            android:singleLine="true"
            android:textColorHint="@color/hint_text_color" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email" />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_search_box"
        app:cardBackgroundColor="@color/box_background_color"
        app:cardCornerRadius="@dimen/corner_radius_home">
        <EditText
            style="@style/TextInsideSearchBox"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_search_box"
            android:background="@null"
            android:layout_gravity="center"
            android:hint="@string/hint_email"
            android:paddingStart="@dimen/more_large"
            android:paddingEnd="@dimen/small"
            android:singleLine="true"
            android:textColorHint="@color/hint_text_color" />
    </androidx.cardview.widget.CardView>
    <com.google.android.material.button.MaterialButton
        style="@style/TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/small"
        android:paddingHorizontal="@dimen/large"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/tiny"
        android:layout_marginBottom="@dimen/small"
        android:text="@string/btn_add"
        app:cornerRadius="@dimen/corner_radius_home" />




</LinearLayout>