<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/very_large"
    android:layout_marginHorizontal="@dimen/medium"
    android:paddingBottom="@dimen/medium">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_group"
        style="@style/TextHeading2"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/form_group_name"
        android:layout_marginTop="@dimen/medium"
        style="@style/TextBody1"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_search_box"
        app:cardBackgroundColor="@color/box_background_color"
        app:cardCornerRadius="@dimen/corner_radius_home">
            <EditText
                android:id="@+id/edtUsername"
                style="@style/TextInsideSearchBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/hint_text_feild_1"
                android:paddingStart="@dimen/more_large"
                android:paddingEnd="@dimen/small"
                android:singleLine="true"
                android:textColorHint="@color/hint_text_color" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/group_founding_date"
        android:layout_marginTop="@dimen/medium"
        style="@style/TextBody1"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/fieldDate"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_search_box"
        app:cardBackgroundColor="@color/box_background_color"
        app:cardCornerRadius="@dimen/corner_radius_home">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtDate"
                style="@style/TextInsideSearchBox"
                android:layout_width="@dimen/layout_width_0"
                android:layout_height="wrap_content"
                android:layout_weight="@dimen/layout_weight_1"
                android:background="@null"
                android:hint="@string/hint_group_founding"
                android:paddingStart="@dimen/more_large"
                android:paddingEnd="@dimen/small"
                android:singleLine="true"
                android:textColorHint="@color/hint_text_color"
                android:focusable="false"
                android:inputType="none"/>

            <ImageView
                android:id="@+id/icCalendar"
                android:layout_width="@dimen/small_icon"
                android:layout_height="@dimen/small_icon"
                android:layout_marginEnd="@dimen/small"
                android:src="@drawable/ic_calendar" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        style="@style/TextButton"
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/small"
        android:paddingHorizontal="@dimen/large"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/tiny"
        android:layout_marginBottom="@dimen/small"
        android:text="@string/btn_add_member"
        app:cornerRadius="@dimen/corner_radius_home" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />
    <com.google.android.material.button.MaterialButton
        style="@style/TextButton"
        android:id="@+id/btnComplete"
        android:layout_width="match_parent"
        android:layout_height="@dimen/super_large"
        android:paddingVertical="@dimen/small"
        android:paddingHorizontal="@dimen/large"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/small"
        android:layout_marginBottom="@dimen/small"
        android:text="@string/btn_complete"
        app:cornerRadius="@dimen/corner_radius_home" />

</LinearLayout>